--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -7,13 +7,13 @@ template:
     config:
         azure-native:location:
             description: The Azure location to use
-            default: FranceCentral
+            default: EastUs
         azure-native:tenantId:
             description: The tenant Id
-            default: xxxxx-xxxx-xxxx-xxxx-xxxx
+            default: 3617ef9b-98b4-40d9-ba43-e1ed6709cf0d
         azure-native:subscriptionId:
             description: The subscription
-            default: xxxxx-xxxx-xxxx-xxxxx-xxxxx
+            default: 4cedc5dd-e3ad-468d-bf66-32e31bdb9148 #P1-Real Hands-On Labs
         project:url:
             description: Project url
             default: change-me
