--- a/package.json
+++ b/package.json
@@ -5,25 +5,20 @@
         "build": "rm -rf ./bin && tsc",
         "format": "prettier --write .",
         "format-check": "prettier --check .",
-        "dep-check": "depcheck --ignores='@types/node'",
-        "lint": "eslint . --ext .ts",
-        "audit-check": "npm audit --registry=https://registry.npmjs.org --audit-level=high",
-        "postinstall": "npx enforce-node-version"
+        "lint": "eslint . --ext .ts"
     },
     "devDependencies": {
-        "@types/node": "^18.7.0",
-        "@typescript-eslint/eslint-plugin": "^5.37.0",
-        "@typescript-eslint/parser": "^5.37.0",
-        "depcheck": "^1.4.2",
-        "enforce-node-version": "^0.1.0",
-        "eslint": "^8.23.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.25.2",
-        "prettier": "^2.3.2"
+        "@types/node": "^18.15.5",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.27.5",
+        "prettier": "^2.8.6"
     },
     "dependencies": {
-        "@pulumi/azure-native": "^1.19.0",
-        "@pulumi/pulumi": "^3.9.1"
+        "@pulumi/azure-native": "^1.97.0",
+        "@pulumi/pulumi": "^3.59.0"
     },
     "engines": {
         "node": ">=12.10"
